[gd_scene load_steps=9 format=2]

[ext_resource path="res://CharacterBody3D.gd" type="Script" id=1]
[ext_resource path="res://SpatialSceneTest.gd" type="Script" id=2]
[ext_resource path="res://SpatialTeste.tres" type="NavigationMesh" id=3]

[sub_resource type="CapsuleMesh" id=4]

[sub_resource type="CapsuleShape" id=5]

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 32, 32 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 16, 0, 16, -16, 0, 16, 16, 0, -16, -16, 0, 16, -16, 0, -16, 16, 0, -16 )

[sub_resource type="CubeMesh" id=6]

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )
navMesh = ExtResource( 3 )

[node name="CharacterBody3D" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )
target_path = NodePath("../Target")

[node name="MeshInstance" type="MeshInstance" parent="CharacterBody3D"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
mesh = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="CharacterBody3D"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 5 )

[node name="NavAgent" type="NavigationAgent" parent="CharacterBody3D"]
avoidance_enabled = true

[node name="Camera" type="Camera" parent="CharacterBody3D"]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 5 )
current = true

[node name="NavigationMeshInstance" type="NavigationMeshInstance" parent="."]
navmesh = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="NavigationMeshInstance"]
mesh = SubResource( 2 )
skeleton = NodePath("../..")

[node name="StaticBody" type="StaticBody" parent="NavigationMeshInstance/MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="NavigationMeshInstance/MeshInstance/StaticBody"]
shape = SubResource( 3 )

[node name="Target" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11, 1, 0 )
mesh = SubResource( 6 )
skeleton = NodePath("../NavigationMeshInstance")

[connection signal="navigation_finished" from="CharacterBody3D/NavAgent" to="CharacterBody3D" method="_on_NavAgent_navigation_finished"]
[connection signal="target_reached" from="CharacterBody3D/NavAgent" to="CharacterBody3D" method="_on_NavAgent_target_reached"]
[connection signal="velocity_computed" from="CharacterBody3D/NavAgent" to="CharacterBody3D" method="_on_NavAgent_velocity_computed"]
